--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@okta/oidc-middleware": "^2.0.0",
     "@okta/okta-sdk-nodejs": "^2.0.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.14.0",
     "express-session": "^1.17.0",
     "http-status": "^0.2.5",
